--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "new",
+    "name": "react_tasks",
     "version": "1.0.0",
     "description": "",
     "keywords": [],
@@ -8,25 +8,41 @@
         "express": "^4.16.3",
         "react": "^16.3.2",
         "react-dom": "^16.3.2",
+        "react-router-dom": "^4.2.2",
         "react-redux": "^5.0.7",
         "react-router": "^4.2.0",
-        "redux": "^4.0.0"
+        "redux": "^4.0.0",
+        "redux-thunk": "^2.2.0",
+        "redux-persist": "^5.9.1",
+        "axios": "^0.18.0",
+        "classnames": "^2.2.5",
+        "normalizr": "^3.2.4"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
-        "jest": "^22.4.3",
         "webpack": "^4.6.0",
         "webpack-cli": "^2.1.2",
-        "webpack-dev-server": "^3.1.4"
+        "css-loader": "^0.28.11",
+        "webpack-dev-server": "^3.1.4",
+        "style-loader": "^0.21.0",
+        "enzyme": "^3.3.0",
+        "enzyme-adapter-react-16": "^1.1.1",
+        "extract-text-webpack-plugin": "4.0.0-beta.0",
+        "file-loader": "^1.1.11",
+        "html-webpack-plugin": "^3.2.0",
+        "jest": "^22.4.3",
+        "node-sass": "^4.9.0",
+        "react-test-renderer": "^16.3.2",
+        "sass-loader": "^7.0.1",
+        "url-loader": "^1.0.1"
     },
     "scripts": {
         "build": "webpack --config ./webpack.config.js  --env.prod",
         "dev": "webpack-dev-server --config ./webpack.config.js",
-        "start": "node ./src/Server.js",
-        "test": "jest",
-        "just-test": "echo \"Test: just test the script cmd \" && exit 0 "
+        "start": "node ./src/server/app",
+        "test": "jest --coverage"
     }
 }
