--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "babel-loader": "^7.1.4",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "babel-preset-env": "^1.7.0",
         "webpack": "^4.6.0",
         "webpack-cli": "^2.1.2",
         "css-loader": "^0.28.11",
@@ -37,11 +38,14 @@
         "node-sass": "^4.9.0",
         "react-test-renderer": "^16.3.2",
         "sass-loader": "^7.0.1",
-        "url-loader": "^1.0.1"
+        "url-loader": "^1.0.1",
+        "react-hot-loader": "^4.3.3",
+        "webpack-merge": "^4.1.3",
+        "webpack-node-externals": "^1.7.2"
     },
     "scripts": {
-        "build": "webpack --config ./webpack.config.js  --env.prod",
-        "dev": "webpack-dev-server --config ./webpack.config.js",
+        "build": "webpack --config ./webpack --env.prod",
+        "dev": "webpack-dev-server --config ./webpack",
         "start": "node ./src/server/app",
         "test": "jest --coverage"
     }
